src/static/scss/map/_views.scss
//colours for the style
$body:#353535;
$grey:#EAEAEA;
$lightgrey:#F7F7F7;
$darkgrey:#353535;
$postive:#55832A;
$negative:#832A2A;

// colours of the parties
$labour:#D50000;
$green:#75A92D;
$liberal:#FDBB30;
$ukip:#800080 ;
$conservatives:#0087DC ;
$snp:#000 ;
$plaid:#3E8424;
$sinnfein:#006C2A;  
$sociallabour:#006E51;
$alliance:#F8CE00;

div#left_column_half{
  width:50%;
  float:left;
}

div#right_column_half{
  width:50%;
  float:right;
}

ol.tabpannel-top{
  padding-left: 0px;
  padding-right: 0px;
  li{
    list-style: none;
    border:3px solid $grey;
    text-align: center;
    color:$grey;
    cursor:pointer;
    display: inline;
    float: left;
    width:50%;

    &.active{
      background-color: $grey;
      border:3px solid $grey;
      color:$body;
    }

  }
}

.tabpannel-content-list{
  display:none;
}

.tabpannel-content-list.active{
  display:block !important;
}

ul.tabpannel-content{
  padding-left: 0px;
  padding-right: 0px;
  list-style: none;
}

ul.tabpannel-top-content__partytrend__list{
  padding-left:0px;
  padding-right: 0px;
  li{
    text-decoration: none;
    float: left;
    width: 100%;
    list-style: none;
    height: 37px;
    border-top: 1px solid $lightgrey;
    border-bottom: 1px solid $lightgrey;
    padding-top: 7px;
    cursor:pointer;
    text-align:left;
  }

  .pt_ch{
    float:right;
  }
}

ul.data_tab_sections{
  padding-left:0px;
  padding-right:0px;
  min-height:500px;
  position: relative;

  li.data_tab_pannels{
    text-decoration: none;
    list-style: none;
    float:left;
    width:100%;
    height:100%;
    display:none;
    position: absolute;
  }

  li.data_tab_pannels.active{
    display:block;
  }

  .darkpannel{
    background-color: $grey;
    padding:10px;

    h4{
      width: 100%;
      border-bottom: 2px solid #F7F7F7;
      text-align: right;
      height: 40px;
      margin-top: 10px;
    }

    .tabpannel-content_arrow{
      color:$darkgrey;
      float:left;
    }
  }
}

.data_tab_pannels_partylist{
  padding-left:0px;

  .data_tab_pannels_partylist-item{
    list-style: none;
    margin-top: 5px;
    margin-bottom: 5px;
    padding:10px;
  }
  .data_tab_pannels_partylist-item-wrapper{
    position: relative;

  }

  .data_tab_pannels_partylist-item-image{
    position: absolute;
    width: 40px;
    height: 40px;
    float: left;
    background-color: black;
    top: -12px;
    &.conservatives{background:url(../../img/parties/conservatives.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.labour{background:url(../../img/parties/labour.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.green{background:url(../../img/parties/green-party.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.liberal{background:url(../../img/parties/liberal-democrats.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.plaid{background:url(../../img/parties/plaid-cymru.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.scottishgreen{background:url(../../img/parties/scottish-green-party.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.snp{background:url(../../img/parties/scottish-national-party.png) no-repeat; background-size: 40px 40px; background-position: center;}
    &.ukip{background:url(../../img/parties/ukip.png) no-repeat; background-size: 40px 40px; background-position: center;}
  }

  .data_tab_pannels_partylist-item-title{
    margin:5px;
    padding-left: 60px;
    text-align: left;
  }
}

.data_tab_pannels_issuelist{
  padding-left:0px;
  columns:2;
  -webkit-columns:2;

  .data_tab_pannels_issuelist-item{
    list-style: none;
    margin-top: 5px;
    margin-bottom: 5px;
    padding:10px;
    display: table-row;
    height: 70px;
  }
  .data_tab_pannels_issuelist-item-wrapper{
    position: relative;

  }

  .data_tab_pannels_issuelist-item-image{
    position: absolute;
    width: 40px;
    height: 40px;
    float: left;
    background-color: black;
    top: -12px;
    &.crime{background:url(../../img/issues/crime.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.europe{background:url(../../img/issues/europe.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.democracy{background:url(../../img/issues/democrscy.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.foreign{background:url(../../img/issues/defence.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.economy{background:url(../../img/issues/economy.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.health{background:url(../../img/issues/health.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.education{background:url(../../img/issues/education.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.immigration{background:url(../../img/issues/immigration.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.environment{background:url(../../img/issues/environment.svg) no-repeat; background-size: 40px 40px; background-position: center;}
    &.welfare{background:url(../../img/issues/welfare.svg) no-repeat; background-size: 40px 40px; background-position: center;}
  }


  .data_tab_pannels_issuelist-item-title{
    margin:5px;
    padding-left: 60px;
    text-align: left;
  }
}

.tabpannel-content-pannel__wrap{
  position: relative;
  height: 80%;
  overflow-y: scroll;
  overflow-x: hidden;
  width: 96%;
}


.mapsection_mobile{
  display:none;
}
@media(max-width:992px){

}

@media (max-width: 768px){
  div#left_column_half{
	display:none;
  }

  div#right_column_half{
	width:100%;
	float:left;
  }

  .mapsection_mobile{
    display:block;
    width:100%;
  }
}

